Improved loading of source url when using maven-plugin v1.3.2